Fix footer overlap

--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,7 @@ header {
 
 #footer {
     width: 100%;
-    padding-bottom: 56px;
+    padding-bottom: 100px;
 }
 
 #footer .row {
